spade-tests/src/snapshots/spade_tests__parser__wal_suffix_with_unexpected_param_is_error.snap
---
source: spade-tests/src/parser.rs
---
#[wal_suffix(a, uses_clk, this_is_not_valid)]
struct T {}


error: this_is_not_valid is not a valid parameter for wal_suffix
  ┌─ testinput:1:27
  │
1 │ #[wal_suffix(a, uses_clk, this_is_not_valid)]
  │                           ^^^^^^^^^^^^^^^^^


